--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.3.2",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "whatwg-fetch": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
